# term-extraction-director

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Tiltfile  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  tiltconf.json  tiltconf.json.example  update.Versions.js
.github/workflows/: ci.yml  dev_deployment.yml  preprod_deployment.yml  prod_deployment.yml  release.yml
chart/ted/: Chart.yaml  deployment.yaml  service.yaml  ted.yaml  values-dev.yaml
src/ted_app/: constant_medical.py  dataset_model.py  main.py
tests/: helpers.py  test_ted_app.py
