[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ted_app"
version = "0.0.1"
authors = [
  { name="Branwen Snelling", email="branwen.snelling@hdruk.ac.uk" },
]
description = "A director for medical term extraction services"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HDRUK/ted"
"Bug Tracker" = "https://github.com/HDRUK/ted/issues"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
